@@ -1,3 +1,4 @@
+// src/main/java/com/example/backend/util/JwtUtil.java
 package com.example.backend.util;
 
 import io.jsonwebtoken.Claims;
@@ -15,32 +16,41 @@ import java.util.HashMap;
 import java.util.List;
 import java.util.Map;
 import java.util.function.Function;
+import java.util.stream.Collectors;
 
 @Component
 public class JwtUtil {
     private static final String SECRET_KEY = "bXlzZWNyZXRrZXlmb3Jqd3RtYXN0ZXJwbGFuZXQ=2werwtwe";
-    private static final long EXPIRATION_TIME = 86400000;
+    private static final long ACCESS_TOKEN_EXPIRATION_TIME = 15 * 60 * 1000; // 15 phút
+    private static final long REFRESH_TOKEN_EXPIRATION_TIME = 7 * 24 * 60 * 60 * 1000; // 7 ngày
 
     private Key getSignKey() {
         byte[] keyBytes = Decoders.BASE64.decode(SECRET_KEY);
         return Keys.hmacShaKeyFor(keyBytes);
     }
 
-    public String generateToken(UserDetails userDetails) {
+    public Map<String, String> generateTokens(UserDetails userDetails) {
         Map<String, Object> claims = new HashMap<>();
         List<String> authorities = userDetails.getAuthorities().stream()
                 .map(GrantedAuthority::getAuthority)
-                .toList();
+                .collect(Collectors.toList());
         claims.put("authorities", authorities);
-        return createToken(claims, userDetails.getUsername());
+
+        String accessToken = createToken(claims, userDetails.getUsername(), ACCESS_TOKEN_EXPIRATION_TIME);
+        String refreshToken = createToken(new HashMap<>(), userDetails.getUsername(), REFRESH_TOKEN_EXPIRATION_TIME);
+
+        Map<String, String> tokens = new HashMap<>();
+        tokens.put("accessToken", accessToken);
+        tokens.put("refreshToken", refreshToken);
+        return tokens;
     }
 
-    private String createToken(Map<String, Object> claims, String subject) {
+    private String createToken(Map<String, Object> claims, String subject, long expirationTime) {
         return Jwts.builder()
                 .setClaims(claims)
                 .setSubject(subject)
                 .setIssuedAt(new Date(System.currentTimeMillis()))
-                .setExpiration(new Date(System.currentTimeMillis() + EXPIRATION_TIME))
+                .setExpiration(new Date(System.currentTimeMillis() + expirationTime))
                 .signWith(getSignKey(), SignatureAlgorithm.HS256)
                 .compact();
     }
@@ -48,6 +58,15 @@ public class JwtUtil {
     public Boolean validateToken(String token, UserDetails userDetails) {
         final String username = extractUsername(token);
         return (username.equals(userDetails.getUsername()) && !isTokenExpired(token));
+    }
+
+    public Boolean validateRefreshToken(String token) {
+        try {
+            extractAllClaims(token); // Kiểm tra tính hợp lệ của token
+            return !isTokenExpired(token);
+        } catch (Exception e) {
+            return false;
+        }
     }
 
     public String extractUsername(String token) {
